# splittercell

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  main2.cpp
include/: distribution.h  flock.h  graph.h
src/: distribution.cpp  flock.cpp  graph.cpp
tests/: CMakeLists.txt  distribution_test.cpp  graph_tests.cpp
